--- a/src/components/addBar/addBar.module.css
+++ b/src/components/addBar/addBar.module.css
@@ -14,6 +14,7 @@ padding: .4rem .4rem .4rem 1.6rem;
     line-height: 1.5;
 }
 .btn{
+    flex-basis: 8rem;
     background:#a5d5f8;
     border-color: transparent;
     border-top-right-radius: var(--radius);
